Chore: refactored the code
Signed-off-by: Preeti <35308865+pr9t@users.noreply.github.com>